apps/gcp/jenkins/beta/post/_base/policies/tests/inject-registry-config/resource-both.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-both
  namespace: jenkins-tiflash
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: utils
      image: busybox:1.36
    - name: docker
      image: ghcr.io/pingcap-qe/ci/base:v2026
    - name: jnlp
      image: busybox:1.36
