apps/gcp/jenkins/beta/post/_base/policies/tests/inject-registry-config/resource-no-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-label
  namespace: jenkins-tidb
spec:
  containers:
    - name: utils
      image: busybox:1.36
