apps/gcp/jenkins/beta/post/_base/policies/tests/inject-registry-config/resource-utils-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-utils-mutated
  namespace: jenkins-tidb
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: utils
      image: busybox:1.36
      env:
        - name: DOCKER_CONFIG
          value: /var/run/ci/registry
      volumeMounts:
        - name: ci-registry-auth
          mountPath: /var/run/ci/registry
          readOnly: true
    - name: jnlp
      image: busybox:1.36
  volumes:
    - name: ci-registry-auth
      secret:
        secretName: ci-registry-auth
        defaultMode: 292
        items:
          - key: .dockerconfigjson
            path: config.json
